--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
 
     <%= render "layouts/footer" %>
 
-
+    <%= javascript_include_tag "functions", 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag "plugins", 'data-turbolinks-track' => true %>
   </body>
 </html>
