--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,7 +15,8 @@
  *= require font-icons
  *= require animate
  *= require magnific-popup
-
+ *= swiper
+ 
  *= require responsive
  *= require jquery-ui
 
