--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -63,62 +63,69 @@
 
 		<!-- Content
 		============================================= -->
+		<section id="slider" class="slider-parallax full-screen force-full-screen with-header swiper_wrapper page-section clearfix">
+
+			<div class="slider-parallax-inner">
+
+				<div class="swiper-container swiper-parent">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide dark" style="background-image: url(assets/raspberry.jpg);">
+							<div class="container clearfix">
+								<div class="slider-caption slider-caption-center">
+									<h2 data-caption-animate="fadeInUp"><%= t :statement %></h2>
+									<p data-caption-animate="fadeInUp" data-caption-delay="200"><%= t :enforce %></p>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide dark" style="background-image: url(assets/blueberry.jpg);">
+							<div class="container clearfix">
+								<div class="slider-caption slider-caption-center">
+									<h2 data-caption-animate="fadeInUp"><%= t :statement %></h2>
+									<p data-caption-animate="fadeInUp" data-caption-delay="200"><%= t :enforce %></p>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide dark" style="background-image: url(assets/blueberry.jpg);">
+							<div class="container clearfix">
+								<div class="slider-caption slider-caption-center">
+									<h2 data-caption-animate="fadeInUp"><%= t :statement %></h2>
+									<p data-caption-animate="fadeInUp" data-caption-delay="200"><%= t :enforce %></p>
+								</div>
+							</div>
+						</div>
+
+
+					</div>
+					<div id="slider-arrow-left"><i class="icon-angle-left"></i></div>
+					<div id="slider-arrow-right"><i class="icon-angle-right"></i></div>
+					<div id="slide-number"><div id="slide-number-current"></div><span>/</span><div id="slide-number-total"></div></div>
+					<a href="#" data-scrollto="#section-about" class="one-page-arrow dark">
+						<i class="icon-angle-down infinite animated fadeInDown"></i>
+					</a>
+				</div>
+
+			</div>
+
+		</section>
+
+
+
+
+
+
+
+
 		<section id="content">
 
 			<div class="content-wrap" style="padding-top:20px;">
 
 				<div class="container clearfix">
 
-					<div id="section-home" class="heading-block title-center nobottomborder page-section">
-						<h1><%= t :statement %></h1>
-						<span><%= t :enforce %></span>
-					</div>
 
 
 
-					<div class="clear"></div>
-
-					<div class="col_two_third topmargin nobottommargin">
-
-						<div style="position: relative;" data-height-lg="535" data-height-md="442" data-height-sm="338" data-height-xs="316" data-height-xxs="201">
-							<%= image_tag "SIBERRYA_BR_spicy_mod.png", style: "position: absolute; top: 0; left: 0;", data: { animate: 'fadeInLeft'} %>
-							<%= image_tag "SIBERRYA_CH_cranberry_mod.png", style: "position: absolute; top: 0; left: 0;", data: { animate: 'fadeInRight', delay: '300'} %>
-							<%= image_tag "SIBERRYA_RS_sesame_mod.png", style: "position: absolute; top: 0; left: 0;", data: { animate: 'fadeInUp', delay: '600'} %>
 
 
-						</div>
-
-					</div>
-
-					<div class="col_one_third topmargin nobottommargin col_last">
-
-						<h3><%= t :overview_title %></h3>
-
-						<p><%= t :overview_1 %></p>
-
-						<p><%= t :overview_2 %></p>
-
-						<div class="divider divider-short"><i class="icon-circle"></i></div>
-
-						<ul class="iconlist iconlist-large iconlist-color">
-							<li><i class="icon-ok-sign"></i> <%= t :list_1 %> </li>
-							<li><i class="icon-ok-sign"></i> <%= t :list_2 %> </li>
-							<li><i class="icon-ok-sign"></i> <%= t :list_3 %> </li>
-							<li><i class="icon-ok-sign"></i> <%= t :list_4 %> </li>
-							<li><i class="icon-ok-sign"></i> <%= t :list_5 %> </li>
-							
-						</ul>
-
-					</div>
-
-					<div class="clear"></div>
-
-					<div class="divider divider-short divider-center"><i class="icon-circle"></i></div>
-					
-					<div id="section-features" class="heading-block title-center page-section">
-						<h2>Products</h2>
-						<span>Some of the Products that are gonna blow your mind off</span>
-					</div>
 
 
 					<!-- Portfolio Filter
